<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">hocho</string>
    <string name="image_description">image</string>
    <string name="home_title">Home</string>
    <string name="bookmarks_title">Bookmarks</string>
    <string name="wiki_title">Wiki</string>
    <string name="content_description_drawer_open">Open drawer</string>
    <string name="content_description_drawer_close">Close drawer</string>
    <string name="nav_item_lifecycle">Lifecycle</string>
    <string name="nav_item_layout">Layout</string>
    <string name="layout_title">layout</string>
    <string name="relativelayout">RelativeLayout</string>
    <string name="text1">text1</string>
    <string name="right_of_text1">right of text1</string>
    <string name="below_text2">below text2</string>
    <string name="framelayout">FrameLayout</string>
    <string name="layered_text">layered text</string>
    <string name="layout_gravity_is_center">layout_gravity is center</string>
    <string name="linearlayout_vertical">LinearLayout(vertical)</string>
    <string name="text2">text2</string>
    <string name="text3">text3</string>
    <string name="linearlayout_horizontal">LinearLayout(horizontal)</string>
    <string name="constraintlayout">ConstraintLayout</string>
    <string name="text4">text4</string>
    <string name="button">Button</string>
    <string name="imageview">ImageView</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="databinding">DataBinding</string>
    <string name="snackbar_message">hi, this is a snackbar!</string>
    <string name="fab_message">you tapped Floating Action Button</string>
    <string name="show_snackbar">show snackbar</string>
    <string name="notification">Notification</string>
    <string name="channel_name">hocho news</string>
    <string name="channel_description">hocho channel description</string>
    <string name="notification_title">Notification</string>
    <string name="notification_title_v26">Notification for Android O</string>
    <string name="show_notification">Show notification</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="setting">setting</string>
    <string name="create">create</string>
    <string name="create_group_and_channels">Create group and channels</string>
    <string name="delete_channels">delete channels</string>
    <string name="delete_notification_chennels">Delete notification chennels</string>
    <string name="show_notification_channels">Show notification channels</string>
    <string name="show_channels">show channels</string>
    <string name="show_important_notification">show important notification</string>
    <string name="use_big_picture_notification">use big picture</string>
    <string name="async">Async</string>
    <string name="http_request_on_main_thread">http request on main thread</string>
    <string name="crash">crash!</string>
    <string name="async_task_loader">AsyncTaskLoader</string>
    <string name="get">GET</string>
    <string name="retrofit">Retrofit</string>
    <string name="retrofit_and_coroutine">Retrofit and Coroutine</string>
    <string name="layout">Layout</string>
    <string name="component">Component</string>
    <string name="this_is_a_title">Guideline is very useful</string>
    <string name="sample_body">This is a body of something. This is very loooooooooooooooooooooooooooooooooooooong string. \n\n Actually this is really looong string.\n\nThen this is a verrrrrrrrrrrrrrrrry long text. Because it\'s needed truly.</string>
    <string name="finish_activity">Finish Activity</string>
    <string name="web">Open web site</string>
    <string name="search">Search droidkaigi</string>
    <string name="title_dynamic_gallery">Dynamic Gallery</string>
    <string name="nav_item_dynamic_feature">Dynamic feature</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_activity_dynamic_feature">DynamicFeatureActivity</string>
    <string name="gallery_is_installed">Gallery is installed</string>
    <string name="open">Open</string>
    <string name="gallery_is_not_installed">Gallery is not installed</string>
    <string name="install">Install</string>
    <string name="progress_indicators">Progress indicators</string>
    <string name="title_activity_progress">ProgressActivity</string>
    <string name="progress_title">Progress indecator</string>
    <string name="invoke">Invoke</string>
    <string name="indeterminate_indicators">Indeterminate indicators</string>
    <string name="determinate_indicator">Determinate indicator</string>
    <string name="zero_percent">0%</string>
    <string name="fifty_percent">50%</string>
    <string name="hundred_percent">100%</string>
    <string name="embeded_indicator">Embeded indicator</string>
    <string name="tap">Tap!</string>
    <string name="transition" tools:ignore="ExtraTranslation">Transition</string>
    <string name="shared_element">shared_photo</string>
    <string name="simple_storage">Simple storage</string>
    <string name="compose">Compose</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="switch_dark_theme">switch dark theme</string>
    <string name="current_night_mode">not night</string>
    <string name="night_or_not_night">night or not night?</string>
    <string name="greeting">hello!</string>
</resources>
