<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_layout"
            android:icon="@drawable/ic_layers_black_24dp"
            android:title="@string/nav_item_layout" />
        <item
            android:id="@+id/nav_item_notification"
            android:icon="@drawable/ic_notifications_active_black_24dp"
            android:title="@string/notification" />
        <item
            android:id="@+id/nav_item_async"
            android:icon="@drawable/ic_call_split_black_24dp"
            android:title="@string/async" />
        <item
            android:id="@+id/nav_item_lifecycle"
            android:icon="@drawable/ic_sync_black_24dp"
            android:title="@string/nav_item_lifecycle" />
        <item
            android:id="@+id/nav_item_dynamic_feature"
            android:icon="@drawable/ic_work_black_24dp"
            android:title="@string/nav_item_dynamic_feature" />
        <item
            android:id="@+id/nav_item_progress"
            android:icon="@drawable/ic_network_check_black_24dp"
            android:title="@string/progress_indicators" />
    </group>
</menu>