<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relativelayout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/layoutActivityBackground">

        <TextView
            android:id="@+id/relativeOrigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/layoutActivityPrimary"
            android:text="@string/text1" />

        <TextView
            android:id="@+id/relativeItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/relativeOrigin"
            android:background="@color/layoutActivityLight"
            android:padding="8dp"
            android:text="@string/right_of_text1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/relativeItem2"
            android:layout_margin="16dp"
            android:background="@color/layoutActivityDark"
            android:text="@string/below_text2"
            android:textColor="?android:attr/textColorPrimary" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/framelayout" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/layoutActivityBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/layoutActivityDark"
            android:text="@string/text1"
            android:textColor="#fff"
            android:textSize="50sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/layoutActivityPrimary"
            android:text="@string/layered_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/layoutActivityLight"
            android:text="@string/layout_gravity_is_center" />


    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/linearlayout_vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/layoutActivityBackground"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/layoutActivityPrimary"
            android:text="@string/text1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/layoutActivityLight"
            android:text="@string/text2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/layoutActivityDark"
            android:text="@string/text3"
            android:textColor="#fff" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/linearlayout_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/layoutActivityBackground"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/layoutActivityPrimary"
            android:text="@string/text1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/layoutActivityLight"
            android:text="@string/text2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/layoutActivityDark"
            android:text="@string/text3"
            android:textColor="#fff" />
    </LinearLayout>
    <include layout="@layout/include_constraint_layout" />
</LinearLayout>
