<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="tokyo.punchdrunker.hocho.NotificationActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/toolbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="14dp"
                    tools:text="title" />
            </androidx.appcompat.widget.Toolbar>


            <TextView
                style="@style/NotificationActivityTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_notification" />

            <Button
                android:id="@+id/button_create_channel"
                style="@style/CommonButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{activity::showNotification}"
                android:text="@string/text1" />

            <TextView
                style="@style/NotificationActivityTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_to_setting" />

            <Button
                style="@style/CommonButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{activity::navigateToSetting}"
                android:text="@string/setting" />
        </LinearLayout>
    </ScrollView>
</layout>
